--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1516,7 +1516,11 @@ h5 {
       padding-bottom: 20px;
     }
     button {
-      
+      padding: 10px;
+      margin-top: 10px;
+      background-color: green;
+      color: white;
+      border-radius: 5px;
     }
 
   }
@@ -1568,6 +1572,108 @@ h5 {
       font-size: 29px;
     }
 
+  }
+}
+
+.banner-h4 {
+  font-size: 23px;
+  font-weight: 300;
+  margin-bottom: 20px;
+  text-align: center;
+  margin-top: 50px;
+
+  @include breakpoint(phone) {
+    font-size: 29px;
+  }
+}
+.swiper-button-prev, .swiper-button-next {
+  // padding-left: 100px;
+  top: 45%;
+  width: 40px;
+  height: 40px;
+  background: #fff;
+  color: rgb(7, 117, 13);
+  font-weight: 700;
+  outline: 0;
+  transition: background-color .2s ease, color .2s ease;
+  
+  &::after {
+      font-size: 16px;
+  }
+}
+.mySwiper{
+  // width: 40%;
+  // height: 80%;
+  // text-align: center;
+  margin: 80px;
+  .swiper-item {
+    display: flex;
+  // flex-wrap: wrap;
+  // flex-direction: column;
+    // width: auto;
+    // height: auto;
+    text-align: center;
+
+    .card {
+      box-shadow: 0 1.5px 1.5px 1.5px rgba(0, 0, 0, 0.1);
+      border-radius: 4px;
+      // padding: 2.5%;
+      padding:20px;
+      margin: 20px;
+      // margin-left: 20px;
+      // margin-right: 20px;
+      
+      // img {
+      //   width: auto;
+      // }
+      h4 {
+        font-size: 20px;
+        padding-bottom: 20px;
+      }
+      button {
+        // padding: 10px;
+        margin-top: 10px;
+        background-color: green;
+        color: white;
+        border-radius: 5px;
+      }
+    
+    }
+  }
+}
+
+.event-block {
+  margin: 10%;
+  display: flex;
+  background-color: rgb(231, 231, 231);
+  border-radius: 15px;
+  .event-block-text {
+    justify-content: center;
+    position: relative;
+    h3 {
+      font-size: 19px;
+      font-weight: 300;
+      margin-bottom: 20px;
+      text-align: center;
+      margin-top: 30px;
+
+      @include breakpoint(phone) {
+        font-size: 22px;
+      }
+    
+    }
+    p {
+      padding-top: 8px;
+      font-size: 15px;
+      line-height: 150%;
+      margin-left: 5%;
+      margin-right: 5%;
+    }
+  }
+  .event-block-image {
+    justify-content: center;
+    position: relative;
+    margin: 4%;
   }
 }
 
