--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1307,6 +1307,12 @@ h5 {
   }
 }
 
+.section-center {
+  justify-content: center;
+  // display: flex;
+  align-items: center;
+}
+
 .section {
   margin-top: 3%;
   margin-bottom: 70px;
@@ -1504,6 +1510,7 @@ h5 {
   // border-radius: 4px;
   margin-top: 4%;
   display: flex;
+  justify-content: center;
 
   .getinvolved-item {
     margin-left: 8px;
@@ -1647,9 +1654,14 @@ h5 {
   display: flex;
   background-color: rgb(231, 231, 231);
   border-radius: 15px;
+  max-width: 1200px; // Example maximum width
+  width: 80%;
+  justify-content: center;
+  // text-align: center;
   .event-block-text {
     justify-content: center;
     position: relative;
+    padding-right: 8vw;
     h3 {
       font-size: 19px;
       font-weight: 300;
@@ -1672,6 +1684,60 @@ h5 {
   }
   .event-block-image {
     justify-content: center;
+    text-align: center;
+    position: relative;
+    margin: 4%;
+  }
+}
+
+.org-block {
+  margin-left: 10%;
+  margin-right: 10%;
+  margin-top: 5%;
+  display: flex;
+  background-color: rgb(231, 231, 231);
+  border-radius: 15px;
+  max-width: 1200px; // Example maximum width
+  width: 80%;
+  justify-content: center;
+  // text-align: center;
+  .org-block-text {
+    justify-content: center;
+    position: relative;
+    padding-right: 8vw;
+    h3 {
+      font-size: 19px;
+      font-weight: 300;
+      margin-bottom: 20px;
+      text-align: center;
+      margin-top: 30px;
+
+      @include breakpoint(phone) {
+        font-size: 22px;
+      }
+    
+    }
+    p {
+      padding-top: 8px;
+      font-size: 15px;
+      line-height: 150%;
+      margin-left: 5%;
+      margin-right: 5%;
+    }
+    button {
+      // padding: 10px;
+      margin-top: 10px;
+      margin-left: 5%;
+      margin-right: 5%;
+      padding: 10px;
+      background-color: green;
+      color: white;
+      border-radius: 5px;
+    }
+  }
+  .org-block-image {
+    justify-content: center;
+    text-align: center;
     position: relative;
     margin: 4%;
   }
