--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1688,9 +1688,10 @@ h5 {
   margin-right: 8%;
   margin-top: 30px;
   margin-bottom: 5%;
-  border: #000;
-  border-width: 5px;
-  box-shadow: 0 1.5px 1.5px 1.5px rgba(0, 0, 0, 0.1);
+  border-style: solid;
+  border-color: rgba(0, 0, 0, 0.1);
+  border-width: 1px;
+  box-shadow: 0px 1.5px 1.5px 1.5px rgba(0, 0, 0, 0.1);
   border-radius: 4px;
   // border: 1px solid #ddd;
 
